1. Fix & refactoring 2. Table under the calendar is invisible by default 3. Experimental feature to show the calendar of an entire semester 4. Experimental feature to show pure text, link and announcements on the calendar

--- a/site/public/css/calendar.css
+++ b/site/public/css/calendar.css
@@ -1,19 +1,16 @@
  /* the entire table of calendar */
-.table-calendar
-{
+.table-calendar {
     text-align: left;
-    border:1px solid #000
+    border:1px solid black
 }
 
 /* the title at the top of the calendar table, showing month, year */
-.cal-navigation
-{
+.cal-navigation {
     margin-bottom: 0;
     margin-top: 3px;
 }
 
-.cal-title
-{
+.cal-title {
     text-align: center;
 }
 
@@ -22,24 +19,29 @@
     padding-left:10px;
     padding-right:10px;
     vertical-align: middle;
+    -moz-user-select:none;
+    -webkit-user-select:none;
+    -ms-user-select:none;
+    -khtml-user-select:none;
+    user-select:none;
 }
 
 a.cal-btn {
-    color: var(--btn-text-white);
+    color: var(--text-black);
 }
 
 a.cal-btn:hover {
-    color: var(--btn-text-white);
-    background: rgb(83, 83, 83);
+    color: var(--text-black);
+    background: var(--selected-nav-sidebar);
     border-radius: 20%;
 }
 
 a.cal-btn:visited {
-    color: var(--btn-text-white);
+    color: var(--text-black);
 }
 
 a.cal-btn:focus {
-    color: var(--btn-text-white);
+    color: var(--text-black);
 }
 
 .cal-next-btn {
@@ -51,88 +53,79 @@ a.cal-btn:focus {
 }
 
 
-#prev-month-switch
-{
+#prev-month-switch {
     text-align: right;
 }
 
-#next-month-switch
-{
+#next-month-switch {
     text-align: left;
 }
 
-.cal-month-title
-{
+.cal-month-title {
     font-size: 26px;
-    font-family: 'Source Sans Pro', sans-serif;
     text-transform:uppercase;
-    margin:-7px;
     border:0;
+    margin-top:-7px;
+    margin-bottom:-7px;
 }
 
-.cal-year-title
-{
+h2.cal-month-title {
+    margin-top:-7px;
+    margin-bottom:-7px;
+}
+
+.cal-year-title {
     font-size: 18px;
-    margin:0;
+    margin-top:0;
+    margin-bottom:0;
 }
 
 /* the row of Monday, Tuesday, ... */
-.cal-week-title-row
-{
+.cal-week-title-row {
     margin-bottom: 20px
 }
 
-.cal-week-title
-{
+.cal-week-title {
     padding-left: 3px;
 }
 
-.cal-week-title-sun
-{
+.cal-week-title-sun {
     width: 12%
 }
 
-.cal-week-title-mon
-{
+.cal-week-title-mon {
     width: 15%
 }
 
-.cal-week-title-tue
-{
+.cal-week-title-tue {
     width: 15%
 }
 
-.cal-week-title-wed
-{
+.cal-week-title-wed {
     width: 16%
 }
 
-.cal-week-title-thu
-{
+.cal-week-title-thu {
     width: 15%
 }
 
-.cal-week-title-fri
-{
+.cal-week-title-fri {
     width: 15%
 }
 
-.cal-week-title-sat
-{
+.cal-week-title-sat {
     width: 12%
 }
 
 /* the day number in each cell */
-.cal-day-title
-{
+.cal-day-title {
     font-style: italic;
     font-weight: bold;
 }
 
 /* the day number in each cell if the day is the current date */
-.cal-today-title
-{
-    background: #2f99d8;
+.cal-today-title {
+    background: var(--actionable-blue);
     color: var(--btn-text-white);
     font-style: normal;
     border-radius: 50%;
@@ -141,9 +134,8 @@ a.cal-btn:focus {
 }
 
 /* the day number in each cell if the day belongs to prev/next month of the month the calendar is viewing */
-.cal-next-month-date
-{
-    color:#bfbfbf;
+.cal-next-month-date {
+    color:var(--standard-medium-dark-gray);
     font-style: italic;
     font-weight: bold;
 }
@@ -151,6 +143,11 @@ a.cal-btn:focus {
 /* the cell of each table in the calendar, representing a date */
 .cal-day-cell {
     min-height: 100px;
+    max-height: 195px;
+}
+
+.cal-cell-expand {
+    height: 195px;
 }
 
 /* area in each day cell that lists the items (gradeables, etc) */
@@ -193,81 +190,154 @@ a.cal-gradeable-item:hover {
 }
 
 /* Item colors */
+/** Pure Text **/
+a.cal-gradeable-status-text {
+    color: var(--text-black);
+    padding: 0 0 0 0;
+    border: none;
+    box-shadow: none;
+}
+
+a.cal-gradeable-status-text:hover {
+    color: var(--text-black);
+    padding: 0 0 0 0;
+    cursor:default;
+    border: none;
+}
+
+a.cal-gradeable-status-text:focus {
+    color: var(--text-black);
+    padding: 0 0 0 0;
+    border: none;
+}
+
+/** Announcement **/
+a.cal-gradeable-status-ann {
+    color: #218ffd;  /* This color is from DS website */
+    padding: 0 0 0 0;
+    font-style: italic;
+    border: none;
+    box-shadow: none;
+}
+
+a.cal-gradeable-status-ann:hover {
+    color: #218ffd;
+    padding: 0 0 0 0;
+    font-style: italic;
+    cursor:default;
+    border: none;
+}
+
+a.cal-gradeable-status-ann:focus {
+    color: #218ffd;
+    padding: 0 0 0 0;
+    font-style: italic;
+    border: none;
+}
+
+/** Link **/
+a.cal-gradeable-status-link {
+    color: var(--external-link-blue);
+    padding: 0 0 0 0;
+    text-decoration: underline;
+    border: none;
+    box-shadow: none;
+}
+
+a.cal-gradeable-status-link:hover {
+    color: var(--external-link-hover);
+    padding: 0 0 0 0;
+    border: none;
+}
+
+a.cal-gradeable-status-link:focus {
+    color: var(--external-link-active);
+    padding: 0 0 0 0;
+    border: none;
+}
+
 /* Future homework */
-.cal-gradeable-status-0
-{
+.cal-gradeable-status-0 {
 }
 
 /* Reserved: Beta homework */
-.cal-gradeable-status-1
-{
+.cal-gradeable-status-1 {
 }
 
 /* OPEN TO SUBMIT */
-.cal-gradeable-status-2
-{
+.cal-gradeable-status-2 {
     background-color: var(--actionable-blue);
 }
 
-.cal-gradeable-status-2:hover
-{
+.cal-gradeable-status-2:hover {
     background-color: var(--hover-actionable-blue);
 }
 
-.cal-gradeable-status-2:focus
-{
+.cal-gradeable-status-2:focus {
     background-color: var(--focus-actionable-blue);
 }
 
 /* PAST DUE / LATE SUBMIT */
-.cal-gradeable-status-3
-{
+.cal-gradeable-status-3 {
     background-color: var(--danger-red);
 }
 
-.cal-gradeable-status-3:hover
-{
+.cal-gradeable-status-3:hover {
     background-color: var(--hover-active-danger-red);
     border: var(--hover-active-danger-red);
 }
-.cal-gradeable-status-3:focus
-{
+
+.cal-gradeable-status-3:focus {
     background-color: var(--focus-danger-red);
     border: var(--focus-danger-red);
 }
 
 /* CLOSED  being graded by TA/Instructor */
-.cal-gradeable-status-4
-{
-    background-color: #a07436;
+a.cal-gradeable-status-4 {
+    color: var(--btn-text-black);
+    background-color: var(--btn-default-white);
 }
 
-.cal-gradeable-status-4:hover
-{
-    background-color: #834609;
-    border: #834609;
+a.cal-gradeable-status-4:hover {
+    color: var(--btn-text-black);
+    background-color: var(--btn-default-hover);
+    border: var(--btn-default-hover);
 }
 
-.cal-gradeable-status-4:focus
-{
-    background-color: #cab99d;
-    border: #cab99d;
+a.cal-gradeable-status-4:focus {
+    color: var(--btn-text-black);
+    background-color: var(--btn-default-active);
+    border: var(--btn-default-active);
 }
 
 /* GRADES AVAILABLE */
-.cal-gradeable-status-5
-{
+a.cal-gradeable-status-5 {
+    color: var(--btn-text-black);
     background-color: var(--good-green);
 }
 
-.cal-gradeable-status-5:hover
-{
+a.cal-gradeable-status-5:hover {
+    color: var(--btn-text-black);
     background-color: var(--hover-good-green);
     border: var(--hover-good-green);
 }
 
-.cal-gradeable-status-5:focus
-{
+a.cal-gradeable-status-5:focus {
+    color: var(--btn-text-black);
     background-color: var(--disabled-good-green);
     border: var(--disabled-good-green);
+}
+
+@media (max-width: 800px) {
+    #calendar-list{
+        margin: 0;
+    }
+
+    #calendar-list td:nth-of-type(1):before { content: "Course"; }
+    #calendar-list td:nth-of-type(2):before { content: "Gradeable"; }
+    #calendar-list td:nth-of-type(3):before { content: "Submission Closes"; }
+
+    #calendar-list thead{
+        display: none;
+    }
 }
